<?xml version="1.0"?>
<package format="2">
    <name>fitting_planning</name>
    <version>0.1.0</version>
    <description>The navigation fitting planning package</description>
    <author>b110</author>
    <maintainer email="b110@megvii.com">b110</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>base_local_planner</build_depend>
    
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>cmake_modules</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>base_local_planner</exec_depend>
    <export></export>
</package>
